# Markov_MIDI_Magic

./: README.md  package.json  proposal.md  proposal.txt
cargo-backend/: .gitignore  Cargo.toml
cargo-backend/src/: main.rs  markov.rs  parsing.rs
cargo-backend/src/creations/: Rock_creation.mid  ["Jazz", "Classical"]_creation.mid  ["Jazz", "Classical"]_order_3_creation.mid  ["Jazz"]_creation.mid  ["Jazz"]_order_3_creation.mid  ["classical", "jazz"]_order_3_creation.mid  ["classical"]_order_1_creation.mid  ["classical"]_order_3_creation.mid  ["jazz", "jazz", "jazz", "jazz"]_order_3_creation.mid  ["jazz", "scar_pet", "scar_pet", "scar_pet"]_order_3_creation.mid  ["jazz", "scar_pet"]_order_3_creation.mid  ["jazz"]_order_1_creation.mid  ["some_guy", "jazz"]_order_3_creation.mid  ["some_guy"]_order_3_creation.mid  classical_creation.mid  jazz_creation.mid  rnb_creation.mid
cargo-backend/src/midi-files-by-genre/Rock/: MMP_EMP3_D_100 bpm_16 bars_Synth Lead_Loop_7.mid  MMP_EMP3_Dm_115 bpm_16 bars_Synth Lead_Loop_8.mid  MMP_EMP3_Fm_130 bpm_16 bars_Synth Lead_Loop_9.mid  MMP_EMP4_Ab_120 bpm_8 bars_Synth Bass_Bass_Loop_13.mid  MMP_EMP4_Am_130 bpm_8 bars_Synth Bass_Bass_Loop_12.mid  MMP_EMP4_Cm_100 bpm_16 bars_Synth Lead_Melody_Loop_2.mid  MMP_EMP4_D_140 bpm_16 bars_Synth Bass_Bass_Loop_9.mid  MMP_EMP4_D_140 bpm_16 bars_Synth Lead_Melody_Loop_3.mid  MMP_EMP4_F_120 bpm_8 bars_Synth Lead_Melody_Loop_4.mid  MMP_EMP5_Am_90 bpm_8 bars_Bass Guitar_Bass_Loop_2.mid  MMP_EMP5_G_115 bpm_8 bars_Synth Bass_Bass_Loop_11.mid  MMP_EMP5_G_140 bpm_16 bars_Synth_Bass_Loop_12.mid
(+110 files in other folders)
