[package]
name = "cargo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markov = "1.1.0"
midi-reader-writer = "0.1.1"
midly = "0.5.3"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["io"] }
warp = "0.3.7"

